Fix image--empty being there when the image is clearly not empty, collapse images if they're unavailable

--- a/index.css
+++ b/index.css
@@ -15,7 +15,6 @@
 .teaser__group-text {
   display: flex;
   flex-direction: column;
-  max-width: calc(1rem*30);
 }
 
 .teaser__title {
@@ -84,9 +83,13 @@
 
 .teaser__img {
   min-width: var(--teaser-min-img-width, 200px);
-  width: 70%;
+  width: 100%;
   margin-bottom: var(--grid-spacing-sheep);
   border: none;
+}
+
+.teaser__group-image--empty {
+  display: none;
 }
 
 @media (--viewport-big) {
@@ -96,13 +99,13 @@
   }
   .teaser__group-image {
     margin-right: var(--grid-gutter-m);
-  }
-  .teaser__img {
-    width: 100%;
-  }
-  .teaser__group-image {
     max-width: 15em;
     min-width: var(--teaser-min-img-width, 200px);
     width: 30%;
+  }
+
+  .teaser__group-image--empty {
+    display: block;
+    visibility: hidden;
   }
 }
